<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Friend Zone</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="find_friends">Find friend zone</string>
    <string name="to_find"></string>
    <string name="add_text">Add friend</string>
    <string name="title_activity_add_friend">Add_friend</string>
    <string name="choose_friend">Choose from contacts:</string>
    <string name="first_name">First name</string>
    <string name="name">Enter name</string>
    <string name="add_no">Add new number:</string>
    <string name="phone_no">Phone number</string>
    <string name="enter">Enter</string>
    <string name="title_activity_finding">Finding</string>
    <string name="finding">Friend Zoning</string>
    <string name="title_activity_invite">Invite</string>
    <string name="invite">Invite friend</string>
    <string name="unable">Unable to invite:</string>
    <string name="not_invited"></string>
    <string name="send_invite">Send invite?</string>
    <string name="back">Back</string>
    <string name="cancel_find">cancel_find</string>
</resources>
